openshift/catalogd/manifests/01-networkpolicy-openshift-catalogd-catalogd-controller-manager.yml
---
# Source: olmv1/templates/networkpolicy/networkpolicy-olmv1-system-catalogd-controller-manager.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    olm.operatorframework.io/feature-set: standard
  labels:
    app.kubernetes.io/name: catalogd
    app.kubernetes.io/part-of: olm
  name: catalogd-controller-manager
  namespace: openshift-catalogd
spec:
  egress:
    - {}
  ingress:
    - ports:
        - port: 7443
          protocol: TCP
        - port: 8443
          protocol: TCP
        - port: 9443
          protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: catalogd
  policyTypes:
    - Ingress
    - Egress
